# near-metabuild-hackathon

./: .gitignore  LICENSE.md  README.md  index.d.ts  next.config.js  package.json  tailwind.config.js
app/: head.tsx  layout.tsx  page.tsx
components/: AccountBalance.tsx  BuildResume.tsx  Button.tsx  Footer.tsx  Header.tsx  Hero.tsx  HeroCards.tsx  HeroWave.tsx  Logo.tsx  LogoutIcon.tsx  NEAROverlay.tsx  Nav.tsx  Nprogress.tsx  Overlay.tsx  PaymentStatus.tsx  PaymentStatusNotification.tsx  RateResume.tsx  RatingStar.tsx  ReviewListing.tsx  ReviewProfile.tsx  StarIcon.tsx
contract/: Cargo.toml
contract/neardev/: dev-account  dev-account.env
contract/src/: lib.rs  model.rs
hooks/: useEducation.ts  useEmploymentHistory.ts  useFirebase.ts  useMediaQuery.ts  useMediaUpload.ts  useNav.ts  useNicheMutation.ts  usePayment.ts  useReduxForm.ts  useReference.ts  useRequestMutation.ts  useResume.ts  useResumeBuilder.tsx  useResumeEditor.ts  useReviewDashboard.ts  useReviewProfileform.ts  useSelectReviewNiche.ts  useSkill.ts
json/: form.json  hero.json  nav.json  resumes.json  reviewerprofile.json  sidebar.json
layout/: AuthLayout.tsx  DashboardLayout.tsx  ProviderLayout.tsx  ResumeLayout.tsx  index.tsx
lib/: displayElement.tsx  displayFormElement.tsx  displayResume.tsx  displayResumeDocument.tsx  formatDetails.ts  formatEmploymentHistoryDetails.ts  formatReference.ts  formatResumePrice.ts  getInitials.ts  gmail-constant.js  gmail-constant.ts  gmail.js  gmail.ts  marketplace.ts  near.ts  nearConfig.ts  seeder-1.ts  seeder-2.ts  seeder-3.ts  seeder-4.ts  seeder.ts  (+3 more)
(+131 files in other folders)
